# gio

./: .gitignore  CMakeLists.txt  README.md
gio/: config.cpp  config.hpp.in  gio.cpp  gio.hpp
include/gio/: bytes.hpp  span.hpp
src/: config.cpp
test/: bytes.cpp  config.cpp  span.cpp
test/catch/: catch.hpp  main.cpp
